<resources>
    <string name="app_name">Swopitng</string>
    <string name="agreement_policy">By signing up or loggin, you agree to our privacy and policy</string>
    <string name="question_text">Is your number %d?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="seasons">Seasons</string>
    <string name="movies">Movies</string>
    <string name="people">People</string>
    <string name="shows">Shows</string>
</resources>