<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/trendingFragment"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/trending" />

    <item
        android:id="@+id/tvSeasonsFragment"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/seasons" />

    <item
        android:id="@+id/moviesFragment"
        android:title="@string/movies" />

    <item
        android:id="@+id/peopleFragment"
        android:icon="@drawable/ic_outline_people_alt_24"
        android:title="@string/people" />

    <item
        android:id="@+id/tvShowsFragment"
        android:icon="@drawable/ic_outline_compass_calibration_24"
        android:title="@string/shows" />
</menu>